[gd_scene load_steps=4 format=2]

[ext_resource path="res://src/wc/CardChoices.gd" type="Script" id=1]

[sub_resource type="StyleBoxFlat" id=3]
bg_color = Color( 1, 1, 1, 1 )
draw_center = false
border_width_top = 3
border_width_bottom = 3
border_color = Color( 1.5, 1.1, 2, 1 )
corner_radius_top_left = 3
corner_radius_bottom_right = 3

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 1, 1, 1, 1 )
draw_center = false
border_width_left = 3
border_width_right = 3
border_color = Color( 2.2, 1.6, 3, 1 )
corner_radius_top_left = 3
corner_radius_bottom_right = 3

[node name="CardChoices" type="Container"]
script = ExtResource( 1 )

[node name="Panel" type="PanelContainer" parent="."]
margin_left = 7.0
margin_top = 7.0
margin_right = 91.0
margin_bottom = 59.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="VBoxContainer" type="VBoxContainer" parent="Panel"]
margin_left = 7.0
margin_top = 7.0
margin_right = 77.0
margin_bottom = 45.0

[node name="Title" type="Label" parent="Panel/VBoxContainer"]
unique_name_in_owner = true
margin_right = 70.0
margin_bottom = 14.0
text = "Title Test"

[node name="MenuItems" type="VBoxContainer" parent="Panel/VBoxContainer"]
unique_name_in_owner = true
margin_top = 18.0
margin_right = 70.0
margin_bottom = 38.0

[node name="Test" type="Button" parent="Panel/VBoxContainer/MenuItems"]
margin_right = 70.0
margin_bottom = 20.0
text = "Testing 1"

[node name="VerticalHighlights" type="Panel" parent="."]
margin_left = 7.0
margin_top = 7.0
margin_right = 91.0
margin_bottom = 27.0
mouse_filter = 2
custom_styles/panel = SubResource( 3 )

[node name="HorizontalHighlights" type="Panel" parent="."]
margin_left = 7.0
margin_top = 7.0
margin_right = 91.0
margin_bottom = 27.0
mouse_filter = 2
custom_styles/panel = SubResource( 2 )
